package com.harbdm.urbanexplorer.feature.spots.presentation.ui.screens.add_edit_spot

import android.util.Log
import androidx.activity.compose.rememberLauncherForActivityResult
import androidx.activity.result.PickVisualMediaRequest
import androidx.activity.result.contract.ActivityResultContracts
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.material.icons.Icons
import androidx.compose.material.icons.filled.Save
import androidx.compose.material3.MaterialTheme
import androidx.compose.runtime.Composable
import androidx.compose.runtime.LaunchedEffect
import androidx.compose.runtime.collectAsState
import androidx.compose.runtime.getValue
import androidx.compose.runtime.remember
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import androidx.core.content.FileProvider
import androidx.hilt.navigation.compose.hiltViewModel
import com.harbdm.urbanexplorer.core.ui.LocalAppChrome
import com.harbdm.urbanexplorer.core.ui.TopAppBarAction
import com.harbdm.urbanexplorer.core.ui.TopAppBarState
import com.harbdm.urbanexplorer.feature.spots.presentation.ui.screens.add_edit_spot.components.HintTextField
import kotlinx.coroutines.flow.collectLatest
import java.io.File
import com.harbdm.urbanexplorer.feature.spots.R
import com.harbdm.urbanexplorer.core.ui.model.SpotTypeUiProvider
import com.harbdm.urbanexplorer.feature.spots.presentation.ui.components.PhotoCarousel
import com.harbdm.urbanexplorer.feature.spots.presentation.ui.screens.add_edit_spot.components.RatingSlider
import com.harbdm.urbanexplorer.feature.spots.presentation.ui.screens.add_edit_spot.components.TypeDropdownMenu

@Composable
fun AddEditSpotScreen(
    onNavigateBack: () -> Unit,
    modifier: Modifier = Modifier,
    viewModel: AddEditSpotViewModel = hiltViewModel()

) {
    val uiState by viewModel.spotState.collectAsState()

    // Controller of App Bar provided to change it on screen init

    // app chrome, needed to show snackbar messages and change TopAppBar
    val appChrome = LocalAppChrome.current

    Log.d("appChrome check", "Screen appChrome instance: $appChrome")

    val context = LocalContext.current


    val cameraImageUri = remember {
        // saving to temporal cacheDir first in case user decides to not save spot
        val file = File(context.cacheDir, "camera_photo_${System.currentTimeMillis()}.jpg")
        FileProvider.getUriForFile(
            context,
            "${context.packageName}.provider",
            file
        )
    }

    val cameraLauncher = rememberLauncherForActivityResult(
        contract = ActivityResultContracts.TakePicture(),
        onResult = { success ->
            if (success) {
                viewModel.onEvent(AddEditSpotEvent.OnPhotoAdded(cameraImageUri.toString()))
            }
        }
    )

    val galleryLauncher = rememberLauncherForActivityResult(
        contract = ActivityResultContracts.PickVisualMedia(),
        onResult = { uri ->
            uri?.let {
                viewModel.onEvent(AddEditSpotEvent.OnPhotoAdded(uri.toString()))
            }
        }
    )

    // Update AppBar only after loading done to prevent "flickering" of AppBar
    LaunchedEffect(uiState.spotLoading) {
        if (!uiState.spotLoading)
            appChrome.setTopBar(
                TopAppBarState(
                    title = if (viewModel.spotState.value.spotId.toInt() != -1) "Edit Spot" else "New Spot",
                    isBackButtonVisible = true,
                    actions = listOf(
                        TopAppBarAction.IconAction(
                            icon = Icons.Default.Save,
                            contentDescription = "Save",
                            onClick = {
                                viewModel.onEvent(AddEditSpotEvent.OnSaveSpotClicked)
                            },
                            modifier = Modifier.testTag("save_spot_button")
                        )
                    )
                )
            )
    }

    LaunchedEffect(Unit) {
        viewModel.eventFlow.collectLatest { event ->
            when (event) {
                is AddEditSpotViewModel.UiEvent.ShowSnackbar -> {
                    appChrome.showSnackbar(event.message)
                }

                is AddEditSpotViewModel.UiEvent.SaveSpotSuccess -> {
                    onNavigateBack()
                }

                is AddEditSpotViewModel.UiEvent.LaunchCamera -> {
                    cameraLauncher.launch(cameraImageUri)
                }

                is AddEditSpotViewModel.UiEvent.LaunchGallery -> {
                    galleryLauncher.launch(
                        PickVisualMediaRequest(ActivityResultContracts.PickVisualMedia.ImageOnly)
                    )
                }
            }
        }
    }

    Column(modifier = modifier.padding(horizontal = 20.dp)) {
        HintTextField(
            text = uiState.spotTitle.text,
            hint = uiState.spotTitle.hint,
            label = R.string.tittle,
            onValueChange = { newTitle ->
                viewModel.onEvent(AddEditSpotEvent.OnTittleChanged(newTitle))
            },
            textStyle = MaterialTheme.typography.bodyLarge,
            modifier = Modifier.testTag("title_textfield")
        )

        Spacer(modifier = Modifier.height(24.dp))

        TypeDropdownMenu(
            typesList = SpotTypeUiProvider.all(),
            textStyle = MaterialTheme.typography.bodyLarge,
            currentType = uiState.spotType,
            onTypePicked = { type->
                viewModel.onEvent(AddEditSpotEvent.OnTypeChanged(type))
            },
            modifier = Modifier.testTag("type_dropdown_menu")
        )

        Spacer(modifier = Modifier.height(24.dp))

        HintTextField(
            text = uiState.spotDescription.text,
            hint = uiState.spotDescription.hint,
            label = R.string.description,
            onValueChange = { newDescription ->
                viewModel.onEvent(AddEditSpotEvent.OnDescriptionChanged(newDescription))
            },
            textStyle = MaterialTheme.typography.bodyLarge,
            isSingleLine = false,
            modifier = Modifier.height(150.dp)
                .testTag("description_textfield")
        )

        Spacer(modifier = Modifier.height(24.dp))

        PhotoCarousel(
            onPhotoFromCamera = { viewModel.onEvent(AddEditSpotEvent.OnCameraClicked) },
            onPhotoFromGallery = { viewModel.onEvent(AddEditSpotEvent.OnGalleryClicked) },
            photos = uiState.spotPhotos,
            haveAddImagePlaceholder = true,
            modifier = Modifier.height(150.dp)
        )

        Spacer(modifier = Modifier.height(24.dp))

        HintTextField(
            text = uiState.spotLocationHint.text,
            hint = uiState.spotLocationHint.hint,
            label = R.string.location_hint,
            onValueChange = { newLocationHint ->
                viewModel.onEvent(AddEditSpotEvent.OnLocationHintChanged(newLocationHint))
            },
            textStyle = MaterialTheme.typography.bodyLarge,
            modifier = Modifier.testTag("location_hint_textfield")
        )

        Spacer(modifier = Modifier.height(24.dp))

        RatingSlider(
            currentRating = uiState.spotRating,
            ratingRange = 0f..10f,
            onRatingChanged = { newRating ->
                viewModel.onEvent(AddEditSpotEvent.OnRatingChanged(newRating))
            }
        )

    }
}

