...
    // app chrome, needed to show snackbar messages and change TopAppBar
    val appChrome = LocalAppChrome.current

    LaunchedEffect(Unit) {
        appChrome.setTopBar(
            TopAppBarState(
                title = "My Spots",
                actions = listOf(
                    TopAppBarAction.IconAction(
                        icon = Icons.Default.Info,
                        contentDescription = "About",
                        onClick = onAboutClicked
                    ),
                    TopAppBarAction.IconAction(
                        icon = Icons.Default.Add,
                        contentDescription = "Add Spot",
                        onClick = onNewSpotClicked,
                        modifier = Modifier.testTag("new_spot_button")
                    )
                ),
                isBackButtonVisible = false
            )
        )

...
