<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="type_unknown">Unknown</string>
    <string name="type_cafe">Cafe</string>
    <string name="type_graffiti">Graffiti</string>
    <string name="type_park">Park</string>
    <string name="type_restaurant">Restaurant</string>
    <string name="type_museum">Museum</string>
    <string name="type_landmark">Landmark</string>
    <string name="type_other">Other</string>
    <string name="type_and_rating">Type &amp; Rating</string>
</resources>